never hardcode API keys or sensitive information in your codebase.

--- a/Sniper bot/.env
+++ b/Sniper bot/.env
@@ -5,6 +5,9 @@ WALLET_SECRET_JSON=[212,94,37,52,55,198,247,72,178,233,14,140,90,94,245,221,22,9
 RPC_URL=https://api.mainnet-beta.solana.com
 WS_URL=wss://api.mainnet-beta.solana.com
 
+WS_API_KEY=e529e978-f897-4451-b786-650d4fbc73cc
+HTTP_API_KEY=e529e978-f897-4451-b786-650d4fbc73cc
+
 # Helius API endpoints (mainnet, with your API key)
 HELIUS_WS=wss://mainnet.helius-rpc.com/?api-key=e529e978-f897-4451-b786-650d4fbc73cc
 HELIUS_HTTP=https://mainnet.helius-rpc.com/?api-key=e529e978-f897-4451-b786-650d4fbc73cc
